Added Dockerfile config for containerization of both the frontend and backend